[gd_scene load_steps=14 format=2]

[ext_resource path="res://src/dreamscape/CombatElements/CombatSignifier.gd" type="Script" id=1]
[ext_resource path="res://assets/icons/shield.png" type="Texture" id=2]
[ext_resource path="res://themes/darktheme/fonts/Reggae_One/ReggaeOne-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://assets/icons/GUI/ring.png" type="Texture" id=4]
[ext_resource path="res://assets/card_front/tag_container.png" type="Texture" id=5]
[ext_resource path="res://themes/darktheme/StyleBox/InfoPanel.tres" type="StyleBox" id=6]
[ext_resource path="res://src/core/DetailPanels.gd" type="Script" id=7]
[ext_resource path="res://src/dreamscape/InfoPanel.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=4]
resource_name = "Decreased"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.9, 0.9 ), Vector2( 0.9, 0.9 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MC/Amount:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 2.37841, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MC/Amount:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_amount_from_int"
} ]
}

[sub_resource type="Animation" id=2]
resource_name = "Increased"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 1.1 ), Vector2( 1, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MC/Amount:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 2.37841, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MC/Amount:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 1, 0, 1 ), Color( 0, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_amount_from_int"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Signifier:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MC/Amount:rect_scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("MC/Amount:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "Spawned"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MC/Amount:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 2.37841, 0.435275, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.5, 1.5 ), Vector2( 1.5, 1.5 ), Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("MC/Amount:self_modulate")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 0, 1 ), Color( 1, 1, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "set_amount_from_int"
} ]
}

[node name="CombatSignifier" type="Control"]
rect_min_size = Vector2( 24, 30 )
rect_pivot_offset = Vector2( 22.5, 22.5 )
script = ExtResource( 1 )
icon_container_texture = ExtResource( 5 )
icon_extra_container_texture = ExtResource( 4 )

[node name="Signifier" type="CenterContainer" parent="."]
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1

[node name="Label" type="Label" parent="Signifier"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 36, 36 )
mouse_filter = 1
custom_fonts/font = SubResource( 1 )
text = "A"
align = 1
uppercase = true

[node name="IconContainer" type="TextureRect" parent="Signifier"]
margin_left = 2.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 42.0
rect_min_size = Vector2( 40, 40 )
expand = true
stretch_mode = 1

[node name="ExtraContainer" type="TextureRect" parent="Signifier"]
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 45, 45 )
expand = true
stretch_mode = 1

[node name="Icon" type="TextureRect" parent="Signifier"]
margin_left = 7.0
margin_top = 7.0
margin_right = 37.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 30 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="Description" type="PopupPanel" parent="."]
margin_left = 25.0
margin_right = 33.0
margin_bottom = 14.0
custom_styles/panel = ExtResource( 6 )

[node name="VBC" type="VBoxContainer" parent="Description"]
margin_left = 12.0
margin_top = 12.0
margin_right = 312.0
margin_bottom = 31.0

[node name="Label" type="RichTextLabel" parent="Description/VBC"]
margin_left = 12.0
margin_top = 12.0
margin_right = 312.0
margin_bottom = 27.0
rect_min_size = Vector2( 300, 0 )
mouse_filter = 2
bbcode_enabled = true
fit_content_height = true
scroll_active = false

[node name="DetailPanels" type="GridContainer" parent="Description/VBC"]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
script = ExtResource( 7 )
info_panel_scene = ExtResource( 8 )
panel_column_threshold = 4

[node name="MC" type="MarginContainer" parent="."]
margin_right = 22.0
margin_bottom = 28.0
mouse_filter = 2
custom_constants/margin_top = 24
custom_constants/margin_left = 24

[node name="Amount" type="Label" parent="MC"]
margin_left = 24.0
margin_top = 24.0
margin_right = 32.0
margin_bottom = 38.0
text = "0"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Decreased = SubResource( 4 )
anims/Increased = SubResource( 2 )
anims/RESET = SubResource( 3 )
anims/Spawned = SubResource( 5 )

[connection signal="mouse_entered" from="." to="." method="_on_CombatSingifier_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CombatSingifier_mouse_exited"]
